/*
 * $Id: ChangeLog,v 1.1596 2003/10/18 10:42:51 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-10-18 16:09 UTC+2000 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * source/vm/garbage.c
   * source/vm/thread.c
      ! Corrected startup & termination sequences, expecially under linux

   * include/thread.h
      * removed some comments

   * tests/mtgc.prg
      + Added a warning.


2003-10-18 13:25 UTC+2000 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * source/pp/pptable.c
      ! fixed typo in SET OUTPUT SAFETY declaration.

2003-10-18 12:38 UTC+2000 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * source/vm/thread.c
      ! Posix Compliancy: pthread_t may NOT be a scalar, and needs to be
        tested for equaility with pthread_equal(a,b)
      ! hb_mutexForceUnlock() unlocks target mutex all the needed times.
      ! fixes in subscribe().

2003-10-18 04:20 UTC+2000 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * source/rtl/console.c
   * source/vm/thread.c
   * include/hbset.h
      ! finetues for linux version of last changelog

2003-10-18 03:10 UTC+2000 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * include/hbset.h
   * include/set.ch
   * source/rtl/console.c
   * source/rtl/set.c
   * source/pp/pptable.c
      ! @ ..SAY syntax now is expanded in just one DevOut[PICT]() instruction,
         resulting in faster code and ability to control MT cursor + string output
         sequence
      + Added command SET OUTPUT SAFETY [ON]/[OFF] (defaults to on); when turned on
        CONSOLE (devout & companions) operations are mutexed out. When turned off,
        this safety is disable allowing faster rewrite and more resistance to
        async cancelation. Usually, you will want to have that turned on. Command is