@@ -2,7 +2,7 @@
 * Complex example of Multi thread usage
 *
 * Giancarlo Niccolai
-* $Id: mtcomplex.prg,v 1.9 2003/03/16 06:18:12 jonnymind Exp $
+* $Id: mtcomplex.prg,v 1.10 2003/10/18 01:15:19 jonnymind Exp $
 *
 * Here we have a main thread counting, and some secondary
 * threads counting too (in different fashons).
@@ -17,7 +17,7 @@ PROCEDURE Main()
    LOCAL Thread4Handle, MonitorHandle
    LOCAL bKill := .F.
 
-   SET OUTPUT SAFETY ON
+   SET OUTPUT SAFETY OFF
 
    set color to w+/b
    CLEAR SCREEN
@@ -59,7 +59,8 @@ PROCEDURE Main()
       KillAllThreads()
    ELSE
       @ 17, 10 SAY 'Cycle over, stopping Monitor     '
-      KillThread( MonitorHandle, Mutex )
+      KillThread( MonitorHandle )
+      @ 17, 10 SAY 'Cycle over, Monitor Stopped     '
    ENDIF
       
    WaitforThreads()
